@@ -625,7 +625,7 @@ NS_EXTERN int Ns_ConnContentLength(Ns_Conn *conn);
 NS_EXTERN char *Ns_ConnContent(Ns_Conn *conn);
 NS_EXTERN char *Ns_ConnServer(Ns_Conn *conn);
 NS_EXTERN int Ns_ConnResponseStatus(Ns_Conn *conn);
-NS_EXTERN int Ns_ConnSetResponseStatus(Ns_Conn *conn, int new_status);
+NS_EXTERN void Ns_ConnSetResponseStatus(Ns_Conn *conn, int new_status);
 NS_EXTERN int Ns_ConnContentSent(Ns_Conn *conn);
 NS_EXTERN int Ns_ConnResponseLength(Ns_Conn *conn);
 NS_EXTERN Ns_Time *Ns_ConnStartTime(Ns_Conn *conn);
